src/backend/public/styles/index.css
body {
  min-width: 770px;
}

#spaces {
  margin-top: 10px;
}

.space {
  border: 2px solid black;
  margin-top: 10px;
  margin-bottom: 10px;
  height: 250px;
  padding: 5px;
  background-color: whitesmoke;
  border-radius: 5px;
}

.space:hover {
  cursor: pointer;
}

.space-img {
  height: 235px;
  width: 100%;
  object-fit: cover;
}

.space .card-body {
  height: 100%;
}

.space-title {
  font-size: 2em;
}

.space-description {
  font-size: 1.1em;
  word-wrap: break-word;
}

.space-price {
  position: absolute;
  bottom: 0;
  font-size: 2em;
  right: 25px;
}

.space .row {
  height: 100%;
}

#space-search {
  font-size: 1.5em;
  padding: 10px;
  border-radius: 10px;
  border: none;
  width: 100%;
  border: 2px solid black;
}

#content {
  margin-top: 20px;
}

